#pragma once

class AgujeroDeGusano {
    // ...definición futura...
};
