#pragma once
#include "Nave.hpp"

class AstroNave : public Nave {
public:
    AstroNave(float x, float y);
};
