// Item.hpp
#ifndef ITEM_HPP
#define ITEM_HPP

class Item {
    // This class is intentionally left blank.
};

#endif // ITEM_HPP